fixes window resizing issue and solved dependency problem